
Improved changing pointer on some windows: can use an expression when changing memory pointer on Debug CPU, View Sprites, Hexdump and Disassemble

Improved ZX Desktop:
- Dynamic icons (Trash, My Machine, ...) assigned on top buttons now show dynamic state (trash empty/full, current machine image, etc)
- Show icon indicators for open apps on ZX Desktop
- Added setting to empty Trash on exit

Improved ZX Vision:
- Added windows TaskBar
- Added Process ID (PID) for all windows
- Text input fields now handle repeated keys
- Some text input fields now have history of last items, and history is saved on configuration file
- Added function to maximize all windows
- Allow reducing character height
- Improve window list showing spent time on each window and pid of each window/process
- Improve rendering background windows

* Fixes:

Fixed +3 disk (and CPC6128?) (PD765) emulation: TODO: add more details here
Fixed autoload on Spectrum +3
Fixed showing creator on DSK file viewer
Fixed pause: can now return when pressing mouse button too
Fixed assembler parsing expressions (NN) and NN is an hexadecimal number


* As always, there are some other minor bugfixes and improvements

----------------------------------------


Version 10.2 - Hysteria edition. 26 October 2022

* New things added:

Added configurable icons to the ZX Desktop. These icons can:
-Open windows, for example View Sprites
-Trigger actions, like Reset
-File links, these are linked to tapes or snapshots on your disk drive
-There are other special icons, like Trash Can
These icons opens a whole new world on ZEsarUX, so the ZX Desktop is becoming a Full Desktop environment :)

Added new emulated machines:
-ZX Spectrum 48k+
-Microdigital TK80
-Microdigital TK82
-Microdigital TK82C
-Microdigital TK83
-Microdigital TK85
-Microdigital TK95 Spanish
-Timex Computer 2048
-Timex Computer 2068
-Timex Sinclair 1000
-Timex Sinclair 1500

Added Copy Interfaces emulation:
-Defcon
-Dinamid3
-Hilow Barbanegra
-Interface007