@@ -141,6 +141,10 @@ extern char *bitmap_lowericon_ext_desktop_sms_active[];
 extern char *bitmap_lowericon_ext_desktop_sms_inactive[];
 
 extern char *bitmap_lowericon_ext_desktop_plus3_flp_active[];
+extern char *bitmap_lowericon_ext_desktop_plus3_flp_active_framezero[];
+extern char *bitmap_lowericon_ext_desktop_plus3_flp_active_frameone[];
+extern char *bitmap_lowericon_ext_desktop_plus3_flp_active_frametwo[];
+extern char *bitmap_lowericon_ext_desktop_plus3_flp_active_framethree[];
 extern char *bitmap_lowericon_ext_desktop_plus3_flp_inactive[];
 
 extern char *bitmap_lowericon_ext_desktop_betadisk_active[];
